--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
+
+@font-face {
+  font-family: 'MabinogiClassic';
+  src: url('/src/fonts/Mabinogi_Classic_TTF.ttf') format('truetype');
+  font-style: normal;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'MabinogiClassic';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
