--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,12 @@
   }
 }
 
-
-.testAligin{
+.Full_WH{
   width: 100vw;
   height: 100vh;
+}
+
+.Mid_Aligin{
   display: flex;
   flex-direction: column;
   align-items: center;
