--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,15 @@
   align-items: center;
   justify-content: center;
 }
+
+.HoroModal_Back{
+  width: 300px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 10px;
+  margin: 15px;
+  background-color: cadetblue;
+}
