--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,21 @@
   margin: 15px;
   background-color: cadetblue;
 }
+.HoroModal_Header{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.HoroModal_XMark{
+  padding-right: 20px;
+  font-size: 35px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.HoroModal_XMark_OnMouse:hover{
+  color: gray;
+}
